--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 29
@@ -28,6 +29,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.3.2"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation project (':materialtoast')
     testImplementation 'junit:junit:4.12'
